# H3Tag-Core

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  eslint.config.mjs  index.html  jest.config.ts  jest.setup.ts  nx.json  package.json  setup-python.yaml  setup-python.yml  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  pr.yml
.nx/workspace-data/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json
.nx/workspace-data/d/: server-process.json
logs/: .5f413baebdf6f02e072bec8be425d2a81606f56c-audit.json  .89e288a98a87ed5c156ede8e92c8e9639dca0d7f-audit.json  .a126463f5af747e5c189fcae442f278a394cd358-audit.json  .f626621902529a18253b74a4fb565138f5c79436-audit.json
src/: video-frame.ts
types/: global.d.ts
utxo-schema/utxo/: LOG
